Fix menu wrapping

--- a/main.css
+++ b/main.css
@@ -51,6 +51,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: flex;
+  flex-wrap: wrap;
 }
 
 .nav-item {
